# Jimbo_devzAssist_hub

./: .gitignore  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT_PL.md  DEPLOYMENT_SUMMARY.md  FEATURES.md  FEATURES_COMPLETE.md  FEATURE_DOCUMENTATION.md  FEATURE_ENHANCED_FILE_EXPLORER.md  FEATURE_QUICKSTART.md  FEATURE_VISUAL_GUIDE.md  FINAL_ANALYSIS_PL_EN.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTRUKCJA-TERMINAL-XTERM.md  INTEGRATION_GUIDE.md  LIBRARIES_MANAGER.md  MERGE_APPROVAL.md  PHASES_5-7_IMPLEMENTATION.md  PROGRESS-2026-05-07.md  PRZEWODNIK_WIZUALIZACJA_RAG_PL.md  PR_SUMMARY.md  QUICKSTART_PL.md  RAG_AGENT_VISUALIZATION_RESOURCES.md  README.md  RUN_JIMBO_PRO.bat  TESTING_GUIDE.md  USER_GUIDE_PHASES_5-7.md  create_shortcut.ps1  index.html  launcher.ps1  package-lock.json  package.json  wrangler.toml
.github/workflows/: cloudflare-pages.yml
public/: _headers  _redirects
public/themes/: lamborghini-aggressive.json  techdev-dark.json  warp.json
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  prompts.rs
src/components/: AIAssistant.css  AIAssistant.jsx  BlogHub.css  BlogHub.jsx  CodeEditor.css  CodeEditor.jsx  ContextMenu.css  ContextMenu.jsx  ContextSelector.css  ContextSelector.jsx  Dashboard.css  Dashboard.jsx  DiffLine.jsx  DiffViewer.css  DiffViewer.jsx  FileExplorer.css  FileExplorer.jsx  FileTreeNode.css  FileTreeNode.jsx  Infrastructure.css  Infrastructure.jsx  Integrations.css  Integrations.jsx  LibrariesManager.css  LibrariesManager.jsx  MOAPanel.css  (+39 more)
(+36 files in other folders)
