[package]
name = "bonzo-devassist"
version = "1.0.0"
description = "BONZO DevAssist AI - Intelligent Development Environment"
authors = ["Bonzokoles"]
license = "MIT"
repository = "https://github.com/Bonzokoles/Jimbo_devzAssist_hub"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
